syntax = "proto3";

option go_package = "./proto";

package user;

service UserService {
	rpc GetUser(UserIdReq) returns (UserResp);
	rpc GetUsers(UserIdsReq) returns (UsersResp);
	rpc CreateUser(CreateUserReq) returns (UserIdResp);
	rpc SearchUser(SearchReq) returns (UsersResp);
}

message UserIdReq {
	int32 id = 1;
}

message UserIdResp {
	int32 id = 1;
}

message UserIdsReq {
	repeated int32 ids = 1;
}

message CreateUserReq {
	string fname = 2;
	string city = 3;
	int64 phone = 4;
	string height = 5;
	bool married = 6;
  }
  

message UserResp {
	int32 id = 1;
	string fname = 2;
	string city = 3;
	int64 phone = 4;
	string height = 5;
	bool married = 6;
}
  
message UsersResp {
	repeated UserResp users = 1;
}


message SearchReq {
    oneof search_field {
        int32 id = 1;
        string fname = 2;
        string city = 3;
        int64 phone = 4;
        string height = 5;
        bool married = 6;
    }
}